Don't allow mouse events if pen is pressed

BUG: 391346